# cudasearch

./: .gitignore  CMakeLists.txt  README.md
bench/: main_bench.cpp
results/: cpu_scaling.csv  gpu_naive.csv
scripts/: download_datasets.sh
src/core/: cpu_search.cpp  cpu_search.hpp
src/cuda/: gpu_search.cu  gpu_search.cuh
src/io/: fvecs_loader.cpp  fvecs_loader.hpp
tests/: test_recall.cpp
